--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@ https://justinjackson.ca/jolt
       <img src="./img/justin-jackson-hand-drawn.png" class="img-responsive" alt="Justin Jackson hand drawn" />
       </div>
       <div class="right">
-      <h3>Here is something to pay attention to:</h3>
-      <p>This is what you want</p>
+      <h3>Are you a programmer, designer, or entrepreneur making digital products?</h3>
+      <p>I help people like you reach more people with the things you create.</p>
       <script async id="_ck_793" src="https://forms.convertkit.com/793?v=5"></script>
       </div>
     </article>
